# SignalOps

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: router.py
backend/app/core/: config.py  dependencies.py  errors.py  logging.py  security.py
backend/app/db/: base.py  session.py
backend/app/models/: __init__.py  alert.py  alerting.py  audit.py  base_mixins.py  configuration.py  enums.py  incident.py  log_event.py  mission.py  mission_event.py  qa.py  robot.py  service.py  telemetry.py  user.py  zone.py
backend/app/repositories/: alerts.py  audit.py  incidents.py  logs.py  services.py  users.py
backend/app/schemas/: alerts.py  audit.py  auth.py  common.py  config.py  dashboard.py  execution.py  fleet.py  history.py  incidents.py  logs.py  missions.py  qa.py  services.py
backend/app/services/: alerts.py  audit.py  auth.py  catalog.py  configuration.py  dashboard.py  demo.py  execution.py  fleet.py  history.py  incidents.py  ingestion.py  log_store.py  missions.py  notifications.py  serializers.py
backend/app/simulator/: engine.py  state_machine.py
backend/app/tasks/: celery_app.py  jobs.py
backend/app/utils/: incidenting.py
backend/app/ws/: manager.py
backend/tests/: conftest.py  test_auth.py  test_catalog.py  test_dashboard.py  test_execution.py  test_fleet_and_alerts.py  test_history.py  test_ingestion.py  test_simulator_state_machine.py  test_validation_and_roles.py
frontend/: .dockerignore  (+13 more)
(+78 files in other folders)
